--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         <div class="about-me">
           <h1 class="my-name">Vadym Khlivetskyi</h1>
           <h2 class="my-profession">Junior Full Stack Developer</h2>
-          <h2 class="my-sumary">Summary</h2>
-          <p> 
+          <h2>Summary</h2>
+          <p class="my-sumary"> 
             For a long time I was an ordinary person. Went to work, worked like everyone else. But in 2023, I wanted to
             study in the IT field. In 2023, I worked at the plant in Poland. And one day my girlfriend signed me up for an IT
             marathon. I really liked it and I happily started studying. During this time, I mastered HTML and CSS,
@@ -144,7 +144,7 @@
       <aside class="saidebar">
         <img
           class="my-photo"
-          src="img/Foto.jpg"
+          src=""
           alt="My foto"
           width="300"
           height="375"
@@ -218,10 +218,11 @@
           <div class="skills-container">
             <h3 class="sadebar-title">Languages</h3>
             <ul class="skills-list">
+              <li class="skills-item">English - Beginner</li>
               <li class="skills-item">Ukrainian - Native</li>
              <li class="skills-item">Poland - Fluent</li>
               <li class="skills-item">Russian - Fluent</li>
-              <li class="skills-item">English - Fifty-fifty</li>
+              
             </ul>
           </div>
         </div>
