--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
       <aside class="saidebar">
         <img
           class="my-photo"
-          src=""
+          src="img/MyFoto.jpg"
           alt="My foto"
           width="300"
           height="375"
