--- a/index.html
+++ b/index.html
@@ -55,9 +55,7 @@
 
               <span class="projects-tech"> [ JavaScript ] </span>
               <p class="description">
-                Website for image search using Backend Queries.Individual
-                project. 
-                Role: Developer</p>
+                Website for image search using Backend Queries.Individual project. Role: Developer</p>
             </li>
             <li class="projects-item">
               <a
@@ -73,8 +71,7 @@
               </a>
               <span class="projects-tech"> [ React.js ] </span>
               <p class="description">
-                Website with popular movies, information about the film andcast, and the ability to search by title. Individual project.
-                Role: Developer
+                Website with popular movies, information about the film andcast, and the ability to search by title. Individual project. Role: Developer
               </p>
             </li>
             <li class="projects-item">
@@ -120,31 +117,26 @@
 <!-- Company 1 -->
 <div>
   <h4 class="company-position">
+    Junior Full Stack Developer</h4>
+    <span class="company-position-accent">IT School GoIT</span>
+  <p class="company-period">May 2023 - April 2024 | Ukraine</p>
+</div>
+<!-- Company 2 -->
+<div>
+<h4 class="company-position">
     Business Economics </h4>
 <span class="company-position-accent">
    State Agrotechnical Academy - Melitopol. </span>
 <!--- </h3> <h3 --->
 <p class="company-period">2008 - 2015 | Ukraine</p>
 </div>
-
-          <!-- Company 2 -->
-
-          <div>
-            <h4 class="company-position">
-              Junior Full Stack Developer</h4>
-              <span class="company-position-accent">IT School GoIT</span>
-            
-
-            <p class="company-period">May 2023 - up to now | Ukraine</p>
-          </div>
-          <div></div>
-        </div>
+</div>
       </div>
       <!-- Sidebar -->
       <aside class="saidebar">
         <img
           class="my-photo"
-          src="img/MyFoto1.JPG"
+          src="img/MyFoto1.png"
           alt="My foto"
           width="340"
           height="350"
