--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <link rel="stylesheet" href="css/reset.css" />
+   
     <link rel="stylesheet" href="css/styles.css" />
 
     <title>My resume</title>
@@ -24,8 +24,8 @@
       <div class="main-content">
         <!-- About me -->
         <div class="about-me">
-          <h1 class="my-name">Vadym Khlivetskyi</h1>
-          <h2 class="my-profession">Junior Full Stack Developer</h2>
+          <h1 class="my-name">VADYM KHLIVETSKYI</h1>
+          <h2 class="my-profession">JUNIOR FULL STACK DEVELOPER</h2>
           <h2>Summary</h2>
           <p class="my-sumary">
             For a long time I was an ordinary person. Went to work, worked like
@@ -121,17 +121,19 @@
 
           <!-- Company 1 -->
           <div>
-            <h4 class="company-position">Junior Full Stack Developer</h4>
-            <span class="company-position-accent">IT School GoIT</span>
+            <h4 class="company-position">IT School GoIT</h4>
+            <span class="company-position-accent"
+              >Junior Full Stack Developer</span
+            >
             <p class="company-period">May 2023 - April 2024 | Ukraine</p>
           </div>
           <!-- Company 2 -->
           <div>
-            <h4 class="company-position">Business Economics</h4>
-            <span class="company-position-accent">
-              State Agrotechnical Academy - Melitopol.
-            </span>
-            <!--- </h3> <h3 --->
+            <h4 class="company-position">
+              State Agrotechnical Academy - Melitopol
+            </h4>
+            <span class="company-position-accent">Business Economics</span>
+
             <p class="company-period">2008 - 2015 | Ukraine</p>
           </div>
         </div>
@@ -153,9 +155,8 @@
 
             <ul class="contacts-list">
               <li class="contacts-item">
-                <a class="contacts-link" href="tel:+48795786105">
-                  +48 795 786 105</a
-                >
+              <a class="contacts-link" href="tel:+48795786105">
+                +48 795 786 105</a>
               </li>
               <li class="contacts-item">
                 <a class="contacts-link" href="mailto:wrestling1333@gmail.com">
@@ -211,7 +212,7 @@
             <ul class="skills-list">
               <li class="skills-item">English - Beginner</li>
               <li class="skills-item">Ukrainian - Native</li>
-              <li class="skills-item">Poland - Fluent</li>
+              <li class="skills-item">Polish - Fluent</li>
               <li class="skills-item">Russian - Fluent</li>
             </ul>
           </div>
