--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
         </div>
       </div>
       <!-- Sidebar -->
-      <aside class="saidebar">
+      <aside class="sidebar">
         <img
           class="my-photo"
           src="img/MyFoto1.png"
@@ -148,7 +148,7 @@
           height="320"
         />
 
-        <div class="saidebar-content">
+        <div class="sidebar-content">
           <!-- Contacts -->
           <div class="contacts-container">
             <h3 class="sadebar-title">Contacts</h3>
