--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
           <h1 class="my-name">VADYM KHLIVETSKYI</h1>
           <h2 class="my-profession">JUNIOR FULL STACK DEVELOPER</h2>
           <h2>Summary</h2>
-          <p class="my-sumary">
+          <p class="my-summary">
             For a long time I was an ordinary person. Went to work, worked like
             everyone else. But in 2023, I wanted to study in the IT field. In
             2023, I worked at the plant in Poland. And one day my girlfriend
