--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
       <aside class="sidebar">
         <img
           class="my-photo"
-          src="img/MyFoto1.png"
+          src="img/MyFoto1.jpeg"
           alt="My foto"
           width="260"
           height="320"
